--- a/view/frontend/templates/list.phtml
+++ b/view/frontend/templates/list.phtml
@@ -1,12 +1,17 @@
 <?php /** @var $testimonial \Test\Testimonials\Block\TestimonialList */ ?>
 <h1><?php echo __('Testimonials') ?></h1>
-<ul class="testimonial-list">
+<ul class="bxslider"">
     <?php /** @var $block \Test\Testimonials\Model\Testimonial */ ?>
     <?php foreach ($block->getTestimonials() as $testimonial): ?>
         <li class="testimonial-list-item">
+            <div class="testimonial-image">
+                <img src="<?php echo $this->getUrl('pub/media/test_testimonials/testimonial/image', ['_secure' => $this->getRequest()->isSecure()]).$testimonial->getAvatar()	?>" />
+            </div>
+
             <h3 class="testimonial-item-title">
                <?php echo $testimonial->getTitle() ?>
             </h3>
+
 
             <div class="testimonial-item-content">
                 <?php echo $testimonial->getContent(); ?>
@@ -18,4 +23,16 @@
         </li>
     <?php endforeach; ?>
 </ul>
+<script type="text/javascript">
+    require(['jquery','jqueryBxsliderMin'],function($){
+        $(window).load(function() {
+            $('.bxslider').bxSlider();
+        });
+    });
+</script>
+
+
+
+
+
 
