--- a/view/frontend/templates/widget/testimonial.phtml
+++ b/view/frontend/templates/widget/testimonial.phtml
@@ -1,12 +1,17 @@
-<?php /** @var $block \Test\Testimonials\Block\Widget\Testimonial */ ?>
+<?php /** @var $testimonial \Test\Testimonials\Block\TestimonialList */ ?>
 <h1><?php echo __('Testimonials') ?></h1>
-<ul class="testimonial-list">
-    <?php /** @var testimonial \Test\Testimonials\Model\Testimonial */ ?>
-    <?php foreach ($block->getTestimonials() as $testimonial): ?>
-        <li class="testimonial-list-item">
+<ul class="bxslider"">
+<?php /** @var $block \Test\Testimonials\Model\Testimonial */ ?>
+<?php foreach ($block->getTestimonials() as $testimonial): ?>
+    <li class="testimonial-list-item">
+        <div class="testimonial-image">
+            <img src="<?php echo $this->getUrl('pub/media/test_testimonials/testimonial/image', ['_secure' => $this->getRequest()->isSecure()]).$testimonial->getAvatar()	?>" />
+        </div>
+        <div class="content">
             <h3 class="testimonial-item-title">
                 <?php echo $testimonial->getTitle() ?>
             </h3>
+
 
             <div class="testimonial-item-content">
                 <?php echo $testimonial->getContent(); ?>
@@ -15,7 +20,14 @@
             <div class="testimonial-item-meta">
                 <strong><?php echo __('Created at:') ?></strong> <?php echo $testimonial->getCreationTime() ?>
             </div>
-        </li>
-
-    <?php endforeach; ?>
+        </div>
+    </li>
+<?php endforeach; ?>
 </ul>
+<script type="text/javascript">
+    require(['jquery','jqueryBxsliderMin'],function($){
+        $(window).load(function() {
+            $('.bxslider').bxSlider();
+        });
+    });
+</script>
